# im-canna

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  furigana.h  im-canna-intl.h  im-canna.spec  imcanna.c
po/: ChangeLog  POTFILES.in  im-canna.pot  ja.gmo  ja.po
tests/: Makefile  README  textview.c
